test/libhyperion/syntaxTests/pragma/empty_version.hyp
pragma hyperion;
// ----
// ParserError 1684: (0-16): Invalid version pragma. Empty version pragma.
